[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/OpticShieldCharged.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/PitchBlack/light.png" type="Texture" id=3]
[ext_resource path="res://src/Sounds/OpticShield - Laser Hit.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=5]
[ext_resource path="res://src/Levels/PitchBlack/X_Lightsource.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/optic_laser.res" type="SpriteFrames" id=7]
[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/optic_laser_mid.res" type="SpriteFrames" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 211.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 211.5 )

[node name="OpticShieldCharged" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 4
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
damage = 2.0
damage_to_bosses = 0.25
damage_to_weakness = 25.0
time_off_screen = 5.0
break_guards = true

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 7 )
animation = "start"
offset = Vector2( 0, -32 )

[node name="animatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0, -540 )
scale = Vector2( 1, 19.1667 )
frames = ExtResource( 8 )
animation = "start"

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0, -150 )
scale = Vector2( 4.5, 16 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -211.5 )
z_index = -1
shape = SubResource( 1 )

[node name="thunder" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 5 )

[node name="light" type="Light2D" parent="."]
position = Vector2( 0, -25 )
scale = Vector2( 6, 3 )
z_index = 277
texture = ExtResource( 3 )
color = Color( 0.690196, 0.92549, 1, 1 )
energy = 0.85
range_layer_min = -2
range_layer_max = -1
script = ExtResource( 6 )

[node name="disabler" type="Node" parent="."]
script = ExtResource( 1 )
fade_out = true
undo_on_rotation_end = false

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 24

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, -211.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
